--- a/sources/enumext.sty
+++ b/sources/enumext.sty
@@ -5976,13 +5976,26 @@
 \cs_new_protected:Npn \__enumext_set_error:nn #1 #2
   { \msg_error:nnn { enumext } { invalid-key } {#1} {#2} }
 %% Define |\setenumextmeta|.
+\str_new:N \l__enumext_path_str
+%% list of supported levels
+\int_step_inline:nn { 4 }
+  {
+    \keys_define:nn { enumext }
+      {
+         #1 .code:n = \str_set:Nn \l__enumext_path_str { level-#1 }
+        ,#1 .value_forbidden:n = true
+      }
+  }
+\keys_define:nn { enumext }
+  {
+     * .meta:n = enumext*
+    ,* .value_forbidden:n = true
+  }
 \prop_const_from_keyval:Nn \c__enumext_meta_paths_prop
   {
-    {enumext,1} = level-1,
-    {enumext,2} = level-2,
-    {enumext,3} = level-3,
-    {enumext,4} = level-4,
-    {enumext*}  = enumext*
+    {enumext,1} = level-1, {enumext,2} = level-2, {enumext,3} = level-3,
+    {enumext,4} = level-4, {enumext*}  = enumext*, {*} = enumext*,
+    {1} = level-1, {2} = level-2, {3} = level-3, {4} = level-4,
   }
 \NewDocumentCommand \setenumextmeta { s O{enumext,1} m +m }
   {
@@ -5998,6 +6011,43 @@
           { \__enumext_add_meta_key:nnn {#2} {#3} {#4} }
       }
   }
+%%%%% NEW
+\NewDocumentCommand \myenvmeta { s O{enumext,1} m +m }
+  {
+    \str_if_eq:eeTF { \tl_trim_spaces:n {#3} } { unknown }
+      { \msg_error:nn { mymodule } { prohibited-unknown } }
+      {
+        \bool_if:nTF {#1}
+          {
+            \int_step_inline:nn { 4 }
+              { \mymodule_env_meta:nnn { enumext, ##1 } {#3} {#4} }
+            \mymodule_env_meta:nnn { enumext* } {#3} {#4}
+          }
+          { \mymodule_env_meta:nnn {#2} {#3} {#4} }
+      }
+  }
+%% NEW
+\cs_new_protected:Npn \mymodule_env_meta:nnn #1
+  {
+    \keys_set:nn { enumext } {#1}
+    \__mymodule_env_meta:Vnn \l__mymodule_path_str
+  }
+\cs_new_protected:Npn \__mymodule_env_meta:nnn #1#2#3
+  {
+    \bool_lazy_or:nnTF
+      { \keys_if_exist_p:nn { enumext / #1} {#2} }
+      { \keys_if_exist_p:nn { enumext / enumext* } {#2} }
+      { \msg_error:nnn { enumext } { already-defined } {#2} }
+      {
+        \keys_define:nn { enumext / #1 }
+          {
+            #2 .meta:n = {#3},
+            #2 .value_forbidden:n = true
+          }
+      }
+  }
+\cs_generate_variant:Nn \__mymodule_env_meta:nnn { V }
+%%%%%%%%%%%%%%%%%%%%%%%%%
 \cs_new_protected:Npn \__enumext_add_meta_key:nnn #1
   {
     \tl_set:Nn \l__enumext_meta_path_tl {#1}
